--- a/env.example
+++ b/env.example
@@ -5,3 +5,15 @@ EXPO_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
 # 例:
 # EXPO_PUBLIC_SUPABASE_URL=https://your-project-id.supabase.co
 # EXPO_PUBLIC_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+
+# API URL設定（morizo-webの呼び出し先）
+# 本番環境のAPI URL（Vercelデプロイ先など）
+EXPO_PUBLIC_API_URL=https://morizo-web.vercel.app
+
+# 開発環境のAPI URL（オプション）
+# Web版開発環境（デフォルト: http://localhost:3000/api）
+# EXPO_PUBLIC_API_URL_WEB=http://localhost:3000/api
+
+# モバイル版開発環境（デフォルト: http://192.168.1.12:3000/api）
+# 実機のIPアドレスに合わせて変更してください
+# EXPO_PUBLIC_API_URL_MOBILE=http://192.168.1.12:3000/api
