feat: 本番morizo-web に向けて微調整

--- a/env.example
+++ b/env.example
@@ -7,13 +7,21 @@ EXPO_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
 # EXPO_PUBLIC_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
 
 # API URL設定（morizo-webの呼び出し先）
-# 本番環境のAPI URL（Vercelデプロイ先など）
-EXPO_PUBLIC_API_URL=https://morizo-web.vercel.app
+# 本番環境のAPI URL（/api は自動的に追加されます）
+# 例: https://morizo.csngrp.co.jp
+# ポート番号が必要な場合: https://morizo.csngrp.co.jp:3000
+EXPO_PUBLIC_API_URL=https://morizo.csngrp.co.jp
 
 # 開発環境のAPI URL（オプション）
-# Web版開発環境（デフォルト: http://localhost:3000/api）
+# 
+# 【重要】開発環境（Expo Go）でも、EXPO_PUBLIC_API_URL_MOBILE が未設定の場合は
+# 自動的に EXPO_PUBLIC_API_URL（本番URL）が使用されます。
+# 特別な不具合調査時のみ EXPO_PUBLIC_API_URL_MOBILE を設定してください。
+#
+# Web版開発環境（オプション）
 # EXPO_PUBLIC_API_URL_WEB=http://localhost:3000/api
-
-# モバイル版開発環境（デフォルト: http://192.168.1.12:3000/api）
+#
+# モバイル版開発環境（オプション - 特別な不具合調査時のみ設定）
 # 実機のIPアドレスに合わせて変更してください
+# この変数を設定すると、開発環境でもローカル開発サーバーを使用します
 # EXPO_PUBLIC_API_URL_MOBILE=http://192.168.1.12:3000/api
