feat: EASビルドおよびAndroid実機動作確認完了

--- a/app.json
+++ b/app.json
@@ -22,7 +22,8 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ]
+      ],
+      "expo-web-browser"
     ],
     "ios": {
       "supportsTablet": true,
