--- a/package.json
+++ b/package.json
@@ -10,25 +10,29 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-picker/picker": "^2.11.4",
+    "@react-native-picker/picker": "2.11.1",
     "@supabase/supabase-js": "^2.57.4",
-    "expo": "~54.0.7",
-    "expo-auth-session": "~6.1.0",
+    "expo": "~54.0.25",
+    "expo-auth-session": "~7.0.9",
     "expo-av": "^16.0.7",
     "expo-clipboard": "^8.0.7",
     "expo-document-picker": "^14.0.7",
     "expo-image-picker": "^17.0.8",
-    "expo-splash-screen": "^31.0.10",
+    "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
-    "expo-web-browser": "~14.0.1",
+    "expo-web-browser": "~15.0.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
     "typescript": "~5.9.2"
+  },
+  "overrides": {
+    "expo-web-browser": "~15.0.9",
+    "expo-constants": "18.0.9"
   },
   "private": true
 }
