fix: 日本語入力時の画面位置を修正

--- a/app.json
+++ b/app.json
@@ -36,7 +36,8 @@
       },
       "package": "jp.co.csngrp.morizo",
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "softwareKeyboardLayoutMode": "adjustResize"
     },
     "web": {
       "favicon": "./assets/favicon.png"
