fix: EXPO Doctor エラー対応（内容はよく解らんけど、キーボード関連）

--- a/app.json
+++ b/app.json
@@ -37,7 +37,7 @@
       "package": "jp.co.csngrp.morizo",
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
-      "softwareKeyboardLayoutMode": "adjustResize"
+      "softwareKeyboardLayoutMode": "resize"
     },
     "web": {
       "favicon": "./assets/favicon.png"
