fix: EXPO Docker エラー対応追加

--- a/app.json
+++ b/app.json
@@ -37,7 +37,7 @@
       "package": "jp.co.csngrp.morizo",
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
-      "softwareKeyboardLayoutMode": "resize"
+      "softwareKeyboardLayoutMode": "pan"
     },
     "web": {
       "favicon": "./assets/favicon.png"
