--- a/app.json
+++ b/app.json
@@ -27,7 +27,10 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "jp.co.csngrp.morizo"
+      "bundleIdentifier": "jp.co.csngrp.morizo",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
