--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-picker/picker": "2.11.1",
     "@supabase/supabase-js": "^2.57.4",
     "expo": "~54.0.25",
+    "expo-apple-authentication": "~8.0.7",
     "expo-auth-session": "~7.0.9",
     "expo-av": "^16.0.7",
     "expo-clipboard": "^8.0.7",
