feat: mobile 収益化プラン作成 Phase3 の途中

--- a/env.example
+++ b/env.example
@@ -25,3 +25,18 @@ EXPO_PUBLIC_API_URL=https://morizo.csngrp.co.jp
 # 実機のIPアドレスに合わせて変更してください
 # この変数を設定すると、開発環境でもローカル開発サーバーを使用します
 # EXPO_PUBLIC_API_URL_MOBILE=http://192.168.1.12:3000/api
+
+# RevenueCat APIキー（IAP用）
+# RevenueCatダッシュボードから取得してください
+# 
+# テストストア用（開発・テスト用 - プラットフォーム共通）
+# ストア側での商品登録がなくてもテスト可能
+# 取得方法: RevenueCatダッシュボード > API keys > Test Store API Key
+# EXPO_PUBLIC_REVENUECAT_TEST_API_KEY=test_xxxxxxxxxxxxxxxxxxxxx
+#
+# プラットフォーム固有のAPIキー（本番環境用）
+# iOS用: https://app.revenuecat.com/projects/{project_id}/settings/api-keys
+# Android用: https://app.revenuecat.com/projects/{project_id}/settings/api-keys
+# ストア側での商品登録が必要
+# EXPO_PUBLIC_REVENUECAT_IOS_API_KEY=appl_xxxxxxxxxxxxxxxxxxxxx
+# EXPO_PUBLIC_REVENUECAT_ANDROID_API_KEY=goog_xxxxxxxxxxxxxxxxxxxxx
