--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-apple-authentication": "~8.0.7",
     "expo-auth-session": "~7.0.9",
     "expo-av": "^16.0.7",
+    "expo-build-properties": "^1.0.9",
     "expo-clipboard": "^8.0.7",
     "expo-document-picker": "^14.0.7",
     "expo-image-manipulator": "~14.0.7",
