--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-picker/picker": "2.11.1",
     "@supabase/supabase-js": "^2.57.4",
-    "expo": "~54.0.25",
-    "expo-apple-authentication": "~8.0.7",
-    "expo-auth-session": "~7.0.9",
-    "expo-av": "^16.0.7",
-    "expo-build-properties": "^1.0.9",
-    "expo-clipboard": "^8.0.7",
-    "expo-document-picker": "^14.0.7",
-    "expo-image-manipulator": "~14.0.7",
-    "expo-image-picker": "^17.0.8",
-    "expo-splash-screen": "~31.0.11",
-    "expo-status-bar": "~3.0.8",
-    "expo-web-browser": "~15.0.9",
+    "expo": "~54.0.27",
+    "expo-apple-authentication": "~8.0.8",
+    "expo-auth-session": "~7.0.10",
+    "expo-av": "~16.0.8",
+    "expo-build-properties": "~1.0.10",
+    "expo-clipboard": "~8.0.8",
+    "expo-dev-client": "~6.0.20",
+    "expo-document-picker": "~14.0.8",
+    "expo-image-manipulator": "~14.0.8",
+    "expo-image-picker": "~17.0.9",
+    "expo-splash-screen": "~31.0.12",
+    "expo-status-bar": "~3.0.9",
+    "expo-web-browser": "~15.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
@@ -35,7 +36,6 @@
     "typescript": "~5.9.2"
   },
   "overrides": {
-    "expo-web-browser": "~15.0.9",
     "expo-constants": "18.0.9"
   },
   "private": true
